exports[`InboxPage matches snapshot 1`] = `
<Page
  authInfoError={null}
  logoutError={null}
  scrollingDisabled={false}
  title="InboxPage.ordersTitle">
  <Connect(withRouter(TopbarContainerComponent))
    currentPage="InboxPage" />
  <div>
    <div>
      <h1>
        <FormattedMessage
          id="InboxPage.title"
          values={Object {}} />
      </h1>
      <TabNav
        className={null}
        rootClassName={null}
        tabClassName={null}
        tabRootClassName={null}
        tabs={
          Array [
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "orders",
                },
              },
              "selected": true,
              "text": <span>
                <FormattedMessage
                      id="InboxPage.ordersTabTitle"
                      values={Object {}} />
          </span>,
            },
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "sales",
                },
              },
              "selected": false,
              "text": <span>
                <FormattedMessage
                      id="InboxPage.salesTabTitle"
                      values={Object {}} />
          </span>,
            },
          ]
        } />
    </div>
    <div>
      <ul>
        <li>
          <Component
            intl={
              Object {
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/preauthorize",
                  "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "lineTotal": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "unitPrice": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "lineTotal": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                      "unitPrice": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "amount": 900,
                    "currency": "USD",
                  },
                },
                "booking": Object {
                  "attributes": Object {
                    "end": 2017-02-16T00:00:00.000Z,
                    "start": 2017-02-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "uuid": "booking1",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "customer-user-id abbreviated name",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "uuid": "order-1",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "provider-user-id abbreviated name",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "type": "transaction",
              }
            }
            type="order" />
        </li>
        <li>
          <Component
            intl={
              Object {
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/preauthorize",
                  "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "lineTotal": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "unitPrice": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "lineTotal": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                      "unitPrice": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "amount": 900,
                    "currency": "USD",
                  },
                },
                "booking": Object {
                  "attributes": Object {
                    "end": 2017-03-16T00:00:00.000Z,
                    "start": 2017-03-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "uuid": "booking2",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "customer-user-id abbreviated name",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "uuid": "order-2",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "provider-user-id abbreviated name",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "type": "transaction",
              }
            }
            type="order" />
        </li>
      </ul>
    </div>
  </div>
</Page>
`;

exports[`InboxPage matches snapshot 2`] = `
<a
  className=""
  href="/order/order-1/details"
  onClick={[Function]}
  style={Object {}}
  title={null}>
  <div
    className={undefined}>
    <div
      className=""
      title="provider-user-id display name">
      <span
        className={undefined}>
        provider-user-id abbreviated name
      </span>
    </div>
  </div>
  <div
    className={undefined} />
  <div
    className={undefined}>
    <div
      className="">
      provider-user-id display name
    </div>
    <div
      className="">
      2017-02-15
       - 
      2017-02-16
      <span
        className={undefined}>
        10
      </span>
    </div>
  </div>
  <div
    className={undefined}>
    <div
      className="">
      InboxPage.stateRequested
    </div>
    <div
      className=""
      title="2017-01-15 00:00">
      2017-01-15
    </div>
  </div>
</a>
`;

exports[`InboxPage matches snapshot 3`] = `
<Page
  authInfoError={null}
  logoutError={null}
  scrollingDisabled={false}
  title="InboxPage.salesTitle">
  <Connect(withRouter(TopbarContainerComponent))
    currentPage="InboxPage" />
  <div>
    <div>
      <h1>
        <FormattedMessage
          id="InboxPage.title"
          values={Object {}} />
      </h1>
      <TabNav
        className={null}
        rootClassName={null}
        tabClassName={null}
        tabRootClassName={null}
        tabs={
          Array [
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "orders",
                },
              },
              "selected": false,
              "text": <span>
                <FormattedMessage
                      id="InboxPage.ordersTabTitle"
                      values={Object {}} />
          </span>,
            },
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "sales",
                },
              },
              "selected": true,
              "text": <span>
                <FormattedMessage
                      id="InboxPage.salesTabTitle"
                      values={Object {}} />
          </span>,
            },
          ]
        } />
    </div>
    <div>
      <ul>
        <li>
          <Component
            intl={
              Object {
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/preauthorize",
                  "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "lineTotal": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "unitPrice": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "lineTotal": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                      "unitPrice": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "amount": 900,
                    "currency": "USD",
                  },
                },
                "booking": Object {
                  "attributes": Object {
                    "end": 2017-02-16T00:00:00.000Z,
                    "start": 2017-02-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "uuid": "booking1",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "customer-user-id abbreviated name",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "uuid": "sale-1",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "provider-user-id abbreviated name",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "type": "transaction",
              }
            }
            type="sale" />
        </li>
        <li>
          <Component
            intl={
              Object {
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/preauthorize",
                  "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "lineTotal": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "unitPrice": Money {
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "lineTotal": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                      "unitPrice": Money {
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "amount": 900,
                    "currency": "USD",
                  },
                },
                "booking": Object {
                  "attributes": Object {
                    "end": 2017-03-16T00:00:00.000Z,
                    "start": 2017-03-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "uuid": "booking2",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "customer-user-id abbreviated name",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "uuid": "sale-2",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "profile": Object {
                      "abbreviatedName": "provider-user-id abbreviated name",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "type": "transaction",
              }
            }
            type="sale" />
        </li>
      </ul>
    </div>
  </div>
</Page>
`;

exports[`InboxPage matches snapshot 4`] = `
<a
  className=""
  href="/sale/sale-1/details"
  onClick={[Function]}
  style={Object {}}
  title={null}>
  <div
    className={undefined}>
    <div
      className=""
      title="customer-user-id display name">
      <span
        className={undefined}>
        customer-user-id abbreviated name
      </span>
    </div>
  </div>
  <div
    className={undefined}>
    <div
      className={undefined} />
  </div>
  <div
    className={undefined}>
    <div
      className="">
      customer-user-id display name
    </div>
    <div
      className="">
      2017-02-15
       - 
      2017-02-16
      <span
        className={undefined}>
        9
      </span>
    </div>
  </div>
  <div
    className={undefined}>
    <div
      className="">
      InboxPage.statePending
    </div>
    <div
      className=""
      title="2017-01-15 00:00">
      2017-01-15
    </div>
  </div>
</a>
`;
